<package format="3">
  <name>tmc_odometry_switcher</name>
  <version>2.0.0</version>
  <description>Switching odometry from certain odometry topics</description>
  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <license>BSD 3-clause Clear License</license>

  <author>Kazuhito Tanaka</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>eigen</depend>
  <depend>tf2_eigen</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tmc_navigation_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>angles</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>